--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Titanic Predictor</title>
+    {% load static %}
+    <link rel="stylesheet" href= "{% static 'style.css' %}">
   </head>
   <body>
     <h1>Working</h1>
+    <button type="button" onclick="clicked()"></button>
     <h3>Get your titanic predictions here</h3>
     <p>Enter in the details of a made up person on the titanic here</p>
     <form action= '{% url 'result' %}'>
@@ -29,6 +32,6 @@
         <p></p>
         <input type="submit">
     </form>
-
+    <script type="text/javascript" src = "{% static 'main.js' %}"></script>
   </body>
 </html>
